Rename app package and adjust properties
App's package name has been renamed from 'com.jianastrero.templateandroidapp' to 'dev.jianastrero.qr_delivery' in several files to align the app's identity with its intended functionality. This makes the package name reflect the app's actual purpose rather than a general template. Accordingly, relevant changes have also been made in other properties, such as 'testInstrumentationRunner' in build.gradle.kts, along with updates in 'gradle.properties', now specifying the new package name, version code, and version name.

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,8 @@ androidXSplashScreenVersion=1.0.1
 composeBomVersion=2023.03.00
 timberVersion=5.0.1
 daggerHiltVersion=2.47
+
+# App propertiee
+appPackageName=dev.jianastrero.qr_delivery
+appVersionCode=1
+appVersionName=1.0.0
