--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,7 @@ androidXSplashScreenVersion=1.0.1
 composeBomVersion=2023.03.00
 timberVersion=5.0.1
 daggerHiltVersion=2.47
+firebaseBomVersion=32.2.2
 
 # App propertiee
 appPackageName=dev.jianastrero.qr_delivery
