--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,7 @@ composeBomVersion=2023.03.00
 timberVersion=5.0.1
 daggerHiltVersion=2.47
 firebaseBomVersion=32.2.2
+cameraXVersion=1.2.3
 
 # App propertiee
 appPackageName=dev.jianastrero.qr_delivery
