--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,7 @@ timberVersion=5.0.1
 daggerHiltVersion=2.47
 firebaseBomVersion=32.2.2
 cameraXVersion=1.2.3
+mlkitBarcodeScanning=18.3.0
 
 # App propertiee
 appPackageName=dev.jianastrero.qr_delivery
